2013-04-22  Mike Blumenkrantz

        * Evas: Fix recursive proxy image rendering to just render black

2013-04-22  WooHyun Jung

        * Edje: When selected word exists, selection is cleared and cursor
		remains on the current edje_entry by additional key input.

2013-04-20  Carsten Haitzler (The Rasterman)

        * Ecore-X: Fix selection parser to not use longs - wrong on
        64bit as the rest of ecore-x keeps types to their REAL sizes (ints),
        but xlib uses longs (change size - eg 64bit even though protocol-wise
        the data is DEFINEd as 32bit)

2013-04-19  Jihoon Kim (jihoon)

        * Edje: Remove code to call ecore_imf_context_reset in case of pressing ESC, Return key

2013-04-14  Carsten Haitzler (The Rasterman)

        * Evas: Fix evas gl_x11 to use default depth when visual
        matching so lower depth displays work

2013-04-15  ChunEon Park
        * Evas: If an object goes to be hidden without replacing the cur/prev
        state info, the object context can be corrupted at the next show time.
        Now it replaces the cur/prev in that rare case.

2013-04-15 Tom Hacohen
        * Evas textblock: Fixed a bug with deletion of ranges that end just
	before a visual format.

2013-04-14  Jiyoun Park

        * Evas: fix gif bug related with scale down decode.

2013-04-14  Jiyoun Park

        * Evas: fix gif decoding bug related with background color.

2013-04-14  ChunEon Park

        * Evas: Don't update evas update area by the clipper if the image obj visible is changed.

2013-04-14  Carsten Haitzler (The Rasterman)

        * Evas: Work around new intel Mesa/xorg bug where alpha
        channel in NON-ARGB windows is not filled in with 0xff even if all the
        code does things right.

2013-04-13  ChunEon Park

        * Evas: Don't be crashed even if the map image size is 0.

2013-04-13  Jihoon Kim

        * Ecore_IMF: Add ecore_imf_input_panel_hide () API